force-app/main/default/objects/ATAK_Personnel__c/ATAK_Personnel__c.object-meta.xml
<CustomObject>
    <label>ATAK Personnel</label>
    <nameField>
        <label>ATAK Personnel</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ATAK Personnel</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>