force-app/main/default/objects/ATAK_Personnel__c/fields/Create_Service_Resource__c.field-meta.xml
<CustomField>
    <fullName>Create_Service_Resource__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create Service Resource</label>
    <type>Checkbox</type>
</CustomField>