force-app/main/default/objects/ATAK_Personnel__c/fields/Depot_Code__c.field-meta.xml
<CustomField>
    <fullName>Depot_Code__c</fullName>
    <label>Depot Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>