force-app/main/default/objects/ATAK_Personnel__c/fields/Depot_Name__c.field-meta.xml
<CustomField>
    <fullName>Depot_Name__c</fullName>
    <label>Depot Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>