force-app/main/default/objects/ATAK_Personnel__c/fields/Dossier__c.field-meta.xml
<CustomField>
    <fullName>Dossier__c</fullName>
    <label>Dossier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>