force-app/main/default/objects/ATAK_Personnel__c/fields/Enddate__c.field-meta.xml
<CustomField>
    <fullName>Enddate__c</fullName>
    <label>Enddate</label>
    <type>Date</type>
</CustomField>