force-app/main/default/objects/ATAK_Personnel__c/fields/Interim_Agency__c.field-meta.xml
<CustomField>
    <fullName>Interim_Agency__c</fullName>
    <label>Interim Agency</label>
    <length>80</length>
    <type>Text</type>
</CustomField>