force-app/main/default/objects/ATAK_Personnel__c/fields/Service_Resource__c.field-meta.xml
<CustomField>
    <fullName>Service_Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Resource</label>
    <referenceTo>ServiceResource</referenceTo>
    <relationshipLabel>ATAK Personnel</relationshipLabel>
    <relationshipName>ATAK_Personnel</relationshipName>
    <type>Lookup</type>
</CustomField>