force-app/main/default/objects/ATAK_Personnel__c/fields/Sitemanager_Code__c.field-meta.xml
<CustomField>
    <fullName>Sitemanager_Code__c</fullName>
    <label>Sitemanager Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>