force-app/main/default/objects/ATAK_Personnel__c/fields/Sitemanager_Name__c.field-meta.xml
<CustomField>
    <fullName>Sitemanager_Name__c</fullName>
    <label>Sitemanager Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>