force-app/main/default/objects/ATAK_Personnel__c/fields/Startdate__c.field-meta.xml
<CustomField>
    <fullName>Startdate__c</fullName>
    <label>Startdate</label>
    <type>Date</type>
</CustomField>