force-app/main/default/objects/ATAK_Personnel__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>User__c</columns>
    <columns>Name__c</columns>
    <columns>Code__c</columns>
    <columns>Phone__c</columns>
    <columns>Mobile__c</columns>
    <columns>Email__c</columns>
    <columns>Depot_Code__c</columns>
    <columns>Depot_Name__c</columns>
    <columns>Department_Code__c</columns>
    <columns>Statute__c</columns>
    <columns>Sitemanager_Code__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>